ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2015/01/08 - jgonzale - GUI
	BUGFIX:		Major compilation problems solved. Previous distribution 
				failed ('jar' file did not include the 'es/bsc/...' directory).
				Now, the compilation system also generates the 'Version.java'
				file and the 'updateAndCheck...' from the 'Makefile.am' of
				the GUI works properly.

	CHANGES:	New About Window in the GUI


2015/01/07 - jgonzale - All - 5.2.10
	CHANGES:	5.2.10 Release!

2015/01/07 - jgonzale - GUI

	CHANGES:	Added support to get a configuration file name as a command
				line parameter and also to print on the standard output the
				configuration file name saved.

				This changes are useful to ease the Paraver integration, as the
				communication between the two interfaces get clarified.

				NOTE: in some cases, the compilation still files due to the
				classpath (where is mixed the Apache Commons IO JAR and the
				pure source of the GUI).

2014/12/30 - jgonzale - GUI
	CHANGES:	Complete restructuration of GUI directory. Now, it includes
				a NetBeans project definition and it follows the classic code
				distribution of Java applications (es.bsc.cepbatools.dimemas 
				packages in the corresponding directories.

				In addition, the manifest file to create the 'jar' is created
				dynamically, and the build is more robust (avoid the fata 'sleep
				5' from previous implementation.

2014/12/30 - jgonzale - prv2dim
	BUGFIX:		Solved a bug when translating Paraver traces with MPI_Iprobe
				events and cluster events that caused a bad generation of the
				CPU bursts duration. Solved by changing the 'OutBlockComparison'
				not to preserve the original events sorting (the last revsion),
				but pushing the MPI_Iprobe related events (duration and number